fixed user_page.html now views is centre on mobile

--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -13,6 +13,13 @@ img {
     width: 80%;
     height: 300px;
 }
-.fl-btn{
-    
+.text-centre{
+    text-align:center;
+}
+.photos > a{
+    border: 1px solid black;
+}
+.photos > p{
+    border: 1px solid black;
+    width: 80.2%;
 }
